# Pixly

./: .gitignore  README.md  config.example.yaml  pyproject.toml
.kiro/specs/screensort/: design.md  requirements.md  tasks.md
pixly/: __init__.py
pixly/cli/: __init__.py  main.py
pixly/core/: __init__.py  analyzer.py  config.py  database.py  deduplicator.py  ocr.py  organizer.py  pipeline.py  watcher.py
pixly/web/: __init__.py  app.py
tests/: __init__.py
tests/integration/: __init__.py
tests/property/: __init__.py  test_analyzer_props.py  test_database_props.py  test_deduplicator_props.py  test_ocr_props.py  test_organizer_props.py  test_watcher_props.py
tests/unit/: __init__.py
